# adviser

./: .gitattributes  .gitignore  .lfsconfig  404.html  Makefile  NEW_README.md  README.rst  custom.css  dialogsystem.py  download_models.sh  index.html  mkdocs.yml  objects.inv  pylintrc  pytest.ini  requirements.txt  requirements_base.txt  requirements_doc.txt  requirements_face_age_gender.txt  requirements_multimodal.txt  requirements_nlu.txt  run_chat.py  run_crosstick.py  sitemap.xml  tutorial.html  tutorial.ipynb
adviser/: router.py  run_chat.py  run_demo_multidomain.py  run_face_age_gender.py  test.py  test_ml_nlu.py  test_nlu.py  test_policy.py
adviser/embeddings/: Taewoon-Kim.pkl
adviser/resources/: README.md
adviser/services/: README.md  __init__.py  dialogsystem.py  service.py
adviser/tests/: conftest.py  conftest_ImsCourses.py  conftest_ImsLecturers.py  conftest_services.py  conftest_superhero.py  domaintracker_test.py  jsonlookupdomain_test.py
adviser/tools/: __init__.py  add_license.py  create_ontology.py  getopensmile.py  install_openface_ubuntu.sh  install_openface_ubuntu.txt  openface.txt  readme.md
adviser/tools/OpenFace/exe/FaceLandmarkVid/: CMakeLists.txt  FaceLandmarkVidZMQ.cpp
adviser/tutorials/: tutorial_chat.py
adviser/utils/: README.md  (+11 more)
docs/: custom.css  faq.md  getting-started.md  index.md  tutorial.html
faq/: index.html
getting-started/: index.html
modules/: __init__.py  module.py
search/: search_index.json
tools/: __init__.py
utils/: __init__.py  beliefstate.py  common.py  goal.py  logger.py  sysact.py  useract.py
(+680 files in other folders)
